--- a/Cotaprice/index.html
+++ b/Cotaprice/index.html
@@ -1,25 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BagiCotaprice</title>
 
-   <link rel="stylesheet" href="style.css">
     
+    <!--Link Boostrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="style.css">
+
 </head>
-
-<body>
+<body> 
     <header>
-        <a href="#" class="logo">Bagi<span>Cotaprice</span></a>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Bagi<span>Cotaprice</span></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Início</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="projeto.html">O Projeto</a>
+                  </li>
+                   <li class="nav-item">
+                    <a class="nav-link" href="sobre.html">Sobre nós</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
 
-        <div class="navbar">
-            <a href="index.html">Início</a>
-            <a href="sobre.html">Sobre nós</a>
-            <a href="contato.html">Contate-nos</a>
-        </div>
-    </header>
+          </header>
+
+          <div class="container overflow-hidden text-center">
+  <div class="row gy-5">
+    <div class="col-6">
+      <div class="p-3"></div>
+    </div>
+    <div class="col-6">
+      <div class="p-3"></div>
+    </div>
+  </div>
+</div>
+
+
+
+          <div id="carouselExampleIndicators" class="carousel slide">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="img/banner.JPG" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/banner2.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+<div b-="" class="footer footer-textolegal">
+      <div b-="" class="responsive-wrapper">
+          <div b-="" class="padding">
+              <p b-="">
+                  © 2024 Bagi CotaPrice. Todos os direitos reservados. Conforme a Lei 9.610/98, é proibida a reprodução total, parcial ou divulgação comercial deste conteúdo sem prévia autorização. <br b-="" class="desktop">Todas as imagens utilizadas neste site são de propriedade do Bagi CotaPrice. Desenvolvido por <a b-="" href="https://github.com/LightDNZ" target="_blank">Gabriel Souza</a>.
+              </p>
+              </div>
+          </div>
+      </div>
+  </div>
+
+    <div  class="footer">
+      <div  class="responsive-wrapper">
+          <div  class="padding">
+              <div  class="row">
+                  <div class="col-lg-6">
+                      <div  class="logo text-left text-center-mobile">
+                          <img  src="img/logo.png" class="desktop" alt="Logo Baig" >
+                      </div>
+                  </div>
+                  <div  class="col-lg-6 desktop">
+                      <div  class="redes text-right text-center-mobile">
+                          <a  href="https://www.facebook.com/">
+                              <img  src="img/icone-facebook.webp" alt="Facebook">
+                          </a>
+                          <a  href="https://www.instagram.com/">
+                              <img  src="img/icone-instagram.png" alt="Instagram">
+                          </a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
+
 
 </html>
