--- a/Cotaprice/index.html
+++ b/Cotaprice/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BagiCotaprice</title>
 
+    <link rel="stylesheet" href="style.css">  
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+
     
     <!--Link Boostrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="style.css">
+   
 
 </head>
 <body> 
@@ -50,12 +54,12 @@
 </div>
 
 
-
-          <div id="carouselExampleIndicators" class="carousel slide">
+  <div id="carouselExampleIndicators" class="carousel slide">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -65,7 +69,10 @@
       <img src="img/banner2.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="img/BANNER-COTA.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/banner-cota2.png" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -77,6 +84,101 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+
+<div class="container overflow-hidden text-center">
+  <div class="row gy-5">
+    <div class="col-6">
+      <div class="p-3"></div>
+    </div>
+    <div class="col-6">
+      <div class="p-3"></div>
+    </div>
+  </div>
+</div>
+
+<div b- class="main">
+
+  <h1>Produtos mais procurados</h1>
+
+  <div class="container overflow-hidden text-center">
+    <div class="row gy-5">
+      <div class="col-6">
+        <div class="p-3"></div>
+      </div>
+      <div class="col-6">
+        <div class="p-3"></div>
+      </div>
+    </div>
+  </div>
+
+
+<div class="container">
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col">
+      <div class="card">
+        <img src="" class="card-img-top " alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Leite Italac</h5>
+          <p class="card-text">Em promoção por apenas R$ 5,50 por unidade</p>
+          <a href="#" class="btn btn-primary">Adicionar no carinho</a>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Coca Cola 600ml</h5>
+          <p class="card-text">Em promoção por apenas R$ 6,20 por unidade</p>
+          <a href="#" class="btn btn-primary">Adicionar no carinho</a>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Creme de Leite Italac</h5>
+          <p class="card-text">Em promoção por apenas R$ 3,20 por unidade</p>
+          <a href="#" class="btn btn-primary">Adicionar no carinho</a>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Áçucar Refinado União</h5>
+          <p class="card-text">Em promoção por apenas R$ 4,70 por unidade</p>
+          <a href="#" class="btn btn-primary">Adicionar no carinho</a>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Leite Ninho</h5>
+          <p class="card-text">Em promoção por apenas R$ 6,20 por unidade</p>
+          <a href="#" class="btn btn-primary">Adicionar no carinho</a>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Água Minalba 2L</h5>
+          <p class="card-text">Em promoção por apenas R$ 2,65 por unidade</p>
+          <a href="#" class="btn btn-primary">Adicionar no carinho</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+</div>
+
 
 <div b-="" class="footer footer-textolegal">
       <div b-="" class="responsive-wrapper">
@@ -113,7 +215,11 @@
       </div>
   </div>
 
-</body>
+
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="lib/slick/slick.js"></script>
+<script type="text/javascript" src="lib/slick/sl.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
