--- a/Cotaprice/sobre.html
+++ b/Cotaprice/sobre.html
@@ -36,6 +36,47 @@
             </div>
           </nav>
 
+    </header>
+
+    <div class="container overflow-hidden text-center">
+      <div class="row gy-8">
+        <div class="col-6">
+          <div class="p-9"></div>
+        </div>
+        <div class="col-6">
+          <div class="p-9"></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="main2">
+
+      <div class="card-group">
+        <div class="card">
+          <img src="img/sydney sweeney ☆.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="img/sydney sweeney ☆.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="img/sydney sweeney ☆.jpg" class="card-img-top height-100" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
           
 
 </body>
